fixed title overlap on mobile

--- a/_sass/themes/_century.post.scss
+++ b/_sass/themes/_century.post.scss
@@ -15,6 +15,8 @@
 .post__title {
     @extend .display-4;
     font-size:3rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .post__meta {
     @extend .text-muted;
